# yamu

./: .gitignore  CODE_OF_CONDUCT.rst  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  conf.py  faq.rst  index.rst
docs/_static/: yamu.css
docs/dev/: index.rst
docs/extensions/: conf.py
docs/guides/: advanced.rst  index.rst  installation.rst  main.rst  tagger.rst
docs/plugins/: completion.rst  epic.rst  fetchart.rst  igdb.rst  index.rst  steam.rst  web.rst
docs/reference/: cli.rst  config.rst  index.rst  query.rst
etc/: lint.sh
tests/: conftest.py  test_importer.py  test_library.py  test_query.py
tests/plugins/: test_completion.py  test_completionist.py  test_epic.py  test_fetchart.py  test_igdb.py  test_plugin_loader.py  test_steam.py  test_web.py
tests/ui/: test_completion.py  test_completion_ui.py  test_import.py  test_list.py  test_remove.py
yamu/: __main__.py  config_default.yaml
yamu/dbcore/: __init__.py  db.py  query.py
yamu/importer/: __init__.py  pipeline.py
yamu/ui/: __init__.py
yamu/ui/commands/: __init__.py  add.py  completion.py  completionist.py  edit.py  fetchart.py  import_.py  list_.py  remove.py  steam.py  update.py  web.py
yamu/util/: __init__.py  changes.py  color.py  config.py  edit_flow.py  editor.py  prompt.py  query.py
yamuplug/: __init__.py  completionist.py  epic.py  fetchart.py  igdb.py  steam.py  web.py
yamuplug/web/static/: yamu.css
yamuplug/web/templates/: index.html
